# RT

./: .gitignore  CMakeLists.txt  Makefile  README.md  RT  RT 04 08 2020 21:53:00.txt  RT 05 08 2020 13:56:12.txt  RT 05 08 2020 14:19:14.txt  RT 05 08 2020 14:20:44.txt  RT 05 08 2020 14:25:16.txt  RT 05 08 2020 14:25:17.txt  RT 05 08 2020 14:28:06.txt  RT 05 08 2020 14:28:18.txt  RT 05 08 2020 14:28:44.txt  RT 05 08 2020 14:29:12.txt  RT 05 08 2020 14:41:48.txt  RT 05 08 2020 16:43:16.txt  RT 05 08 2020 17:06:20.txt  RT 05 08 2020 20:54:27.txt  RT 05 08 2020 21:02:14.txt  RT 05 08 2020 21:14:14.txt  RT 05 08 2020 21:18:34.txt  RT 05 08 2020 21:25:23.txt  RT 05 08 2020 21:25:24.txt  RT 05 08 2020 21:48:20.txt  RT 05 08 2020 21:49:23.txt  RT 05 08 2020 21:49:35.txt  RT 06 08 2020 15:21:09.txt  RT 06 08 2020 15:21:26.txt  RT 06 08 2020 15:21:35.txt  RT 06 08 2020 15:21:43.txt  RT 06 08 2020 16:34:51.txt  RT 06 08 2020 16:44:54.txt  RT 06 08 2020 16:44:55.txt  RT 06 08 2020 16:48:36.txt  RT 06 08 2020 17:01:49.txt  RT 06 08 2020 17:01:50.txt  RT 06 08 2020 17:05:50.txt  RT 06 08 2020 17:12:45.txt  RT 06 08 2020 17:15:35.txt  (+99 more)
ft_printf/: .gitignore  Makefile  author
ft_printf/include/: ft_printf.h
ft_printf/src/: ft_printf.c  pf_put.c  pf_put_char.c  pf_put_empty.c  pf_put_float.c  pf_put_int.c  pf_put_ptr.c  pf_strreverse.c  pf_util.c  pf_util_2.c
include/: cgmath.h  controller.h  file_io.h  fractol.h  ft_printf.h  gui.h  ktgri.yml  ktgri_01.yml  ktgri_comment.yml  m3d.h  math3d.h  obj.h  ocl.h  parser.h  rt.h  textures.h  trace.h
includes/: fractol.h  keys.h
libft/: CMakeLists.txt  Makefile  author  ft_count_till.c  ft_enqueue.c  ft_htdel.c  ft_htset.c  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_base_ext.c  ft_lstfind.c  ft_lstmap.c  ft_lstnew.c  ft_lstreverse.c  ft_memalloc.c  ft_memdel.c  ft_memmove.c  ft_print_bits_fd.c  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_stack_new.c  ft_stack_pop.c  ft_stack_push.c  ft_strcapitalize.c  ft_strcat.c  ft_strclr.c  ft_strdel.c  ft_strequ.c  ft_strhash.c  ft_striter.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strnequ.c  ft_strnstr.c  (+12 more)
libft/tests/: CMakeLists.txt  test_ft_atoi.c  test_ft_bzero.c  test_ft_enqueue.c  test_ft_htget.c  test_ft_htnew.c  test_ft_isalnum.c  test_ft_isalpha.c  test_ft_isascii.c  test_ft_isdigit.c  test_ft_itoa.c  test_ft_lstdel.c  test_ft_lstdelone.c  test_ft_lstiter.c  test_ft_memcmp.c  test_ft_memdel.c  test_ft_memmove.c  test_ft_power.c  test_ft_print_bits_fd.c  test_ft_putnbr.c  test_ft_putnbr_fd.c  test_ft_putstr.c  test_ft_queue_del.c  test_ft_queue_new.c  test_ft_stack_del.c  test_ft_strcapitalize.c  test_ft_strchr.c  test_ft_strclr.c  test_ft_strcmp.c  test_ft_strcpy.c  test_ft_strequ.c  test_ft_striter.c  test_ft_strjoin.c  test_ft_strlcat.c  test_ft_strlen.c  test_ft_strmap.c  test_ft_strncat.c  test_ft_strncpy.c  test_ft_strrchr.c  test_ft_strreverse.c  (+3 more)
minilibx/: mlx_xpm.c.ok
nuklear/: nuklear.h
opencl/includes/: ocl.h  opencl_defs.h
opencl/src/: ocl_error.c  ocl_init.c  ocl_program.c  ocl_utils.c  opencl_error.c  opencl_init.c  opencl_program.c  opencl_utils.c
res/ocl/: k_render.cl  k_select.cl  mat44.cl  obj.hcl  ray.cl  rt.hcl  trace.cl  utils.cl
resources/: k_render_raytrace.cl
resources/ocl/: color.cl  k_postprocess.cl  k_render.cl  k_render_original.cl  mat33.cl  mat44.cl  math33.cl  pathtracing.cl  ray.cl  rt.hcl  tmp.c  trace.cl  utils.cl  uv_coordinates.cl
scene/: CUBE.yml  MAX_CUBES.yml  RT_academ1.yml  RT_academ2.yml  RT_academ3.yml  RT_cone.yml  RT_cosmo.yml  RT_cube.yml  RT_cylinder.yml  RT_disco.yml  RT_ellipse.yml  RT_global_illumination.yml  RT_hyperbolic_cylinder.yml  RT_hyperboloid_with_two_sheets.yml  RT_paraboloid.yml  RT_sphere.yml  cubic.yml  cubism.yml  dir.yml  ktgri_01.yml  moon_moon_omnomnom.yml  pathrace_test.yml  point.yml  scene_01.yml  scene_02.yml  scene_03.yml  scene_04.yml  scene_05.yml  scene_ellipse.yml  scene_hyperbolic_cyl.yml  scene_hyperbolic_paraboloid.yml  scene_hyperboloid_two_sheets.yml  scene_parabolic_cyl.yml  scene_paraboloid.yml  shit_hyperbolic_cylinder.yml  shit_hyperbolic_paraboloid.yml  shit_parabolic_cylinder.yml  simple.yml  test_path.yml
src/: app.c  app_cleanup.c  app_set_kernel_buf.c  app_utils.c  array_attack.c  buffer.c  controller.c  events.c  events_selection.c  file_io.c  finish.c  generator.c  hooks.c  is_valid.c  load_texture.c  main.c  navigation.c  options.c  parse_textures.c  parse_types.c  parser.c  pf_atoi.c  pf_long_math.c  pf_parse.c  pf_put_float.c  pf_put_int.c  pf_put_prefix.c  pf_put_string.c  printing.c  read_scene.c  renderer.c  select.c  stb_image.h  sync.c  test.cl  texture_buffer.c  trace.c  transfer.c  update.c  utils.c
src/cgmath/: mat4.c  mat4_op.c  mat4_rts.c  mat4_transform.c  mat4_utils.c  vec3.c  vec3_op.c
src/gui/: gui_color_pick.c  gui_light_loop.c  gui_scene_loop.c  gui_selection_loop.c  gui_setup.c  gui_single_pick.c  gui_vec_pick.c
src/math3d/: mat4.c  mat4_inv.c  mat4_op.c  mat4_rts.c  mat4_transform.c  mat4_utils.c  vec3.c  vec3_op.c
src/ocl/: ocl_error.c  ocl_init.c  ocl_program.c  ocl_utils.c
tests/: CMakeLists.txt  cl_sandbox.c  cl_sandbox.cl  test_ft_atoi.c  test_ft_bzero.c  test_ft_count_till.c  test_ft_dequeue.c  test_ft_enqueue.c  test_ft_htdel.c  test_ft_htget.c  test_ft_htnew.c  test_ft_htset.c  test_ft_isalnum.c  test_ft_isalpha.c  test_ft_isascii.c  test_ft_isdigit.c  test_ft_isprint.c  test_ft_iswhitespace.c  test_ft_itoa.c  test_ft_itoa_base.c  test_ft_itoa_base_ext.c  test_ft_lstadd.c  test_ft_lstdel.c  test_ft_lstdelone.c  test_ft_lstfind.c  test_ft_lstiter.c  test_ft_lstmap.c  test_ft_lstnew.c  test_ft_lstreverse.c  test_ft_memalloc.c  test_ft_memccpy.c  test_ft_memchr.c  test_ft_memcmp.c  test_ft_memcpy.c  test_ft_memdel.c  test_ft_memmove.c  test_ft_memset.c  test_ft_power.c  test_ft_print_bits_fd.c  test_ft_putchar.c  (+35 more)
tests1/: cl_sandbox.c  cl_sandbox.cl
