cmake_minimum_required(VERSION 3.2)

project(tests C)

set(GCC_COVERAGE_COMPILE_FLAGS "${GCC_COVERAGE_COMPILE_FLAGS} -Wall -Wextra -Werror")

link_directories(${CMAKE_BINARY_DIR})
add_executable(test_ft_atoi test_ft_atoi.c)
add_executable(test_ft_bzero test_ft_bzero.c)
add_executable(test_ft_count_till test_ft_count_till.c)
add_executable(test_ft_dequeue test_ft_dequeue.c)
add_executable(test_ft_enqueue test_ft_enqueue.c)
add_executable(test_ft_htdel test_ft_htdel.c)
add_executable(test_ft_htget test_ft_htget.c)
add_executable(test_ft_htnew test_ft_htnew.c)
add_executable(test_ft_htset test_ft_htset.c)
add_executable(test_ft_isalnum test_ft_isalnum.c)
add_executable(test_ft_isalpha test_ft_isalpha.c)
add_executable(test_ft_isascii test_ft_isascii.c)
add_executable(test_ft_isdigit test_ft_isdigit.c)
add_executable(test_ft_isprint test_ft_isprint.c)
add_executable(test_ft_iswhitespace test_ft_iswhitespace.c)
add_executable(test_ft_itoa test_ft_itoa.c)
add_executable(test_ft_itoa_base test_ft_itoa_base.c)
add_executable(test_ft_itoa_base_ext test_ft_itoa_base_ext.c)
add_executable(test_ft_lstadd test_ft_lstadd.c)
add_executable(test_ft_lstdel test_ft_lstdel.c)
add_executable(test_ft_lstdelone test_ft_lstdelone.c)
add_executable(test_ft_lstfind test_ft_lstfind.c)
add_executable(test_ft_lstiter test_ft_lstiter.c)
add_executable(test_ft_lstmap test_ft_lstmap.c)
add_executable(test_ft_lstnew test_ft_lstnew.c)
add_executable(test_ft_lstreverse test_ft_lstreverse.c)
add_executable(test_ft_memallo test_ft_memalloc.c)
add_executable(test_ft_memccpy test_ft_memccpy.c)
add_executable(test_ft_memchr test_ft_memchr.c)
add_executable(test_ft_memcmp test_ft_memcmp.c)
add_executable(test_ft_memcpy test_ft_memcpy.c)
add_executable(test_ft_memdel test_ft_memdel.c)
add_executable(test_ft_memmove test_ft_memmove.c)
add_executable(test_ft_memset test_ft_memset.c)
add_executable(test_ft_power test_ft_power.c)
add_executable(test_ft_print_bits_fd test_ft_print_bits_fd.c)
add_executable(test_ft_putchar test_ft_putchar.c)
add_executable(test_ft_putchar_fd test_ft_putchar_fd.c)
add_executable(test_ft_putendl test_ft_putendl.c)
add_executable(test_ft_putendl_fd test_ft_putendl_fd.c)
add_executable(test_ft_putnbr test_ft_putnbr.c)
add_executable(test_ft_putnbr_fd test_ft_putnbr_fd.c)
add_executable(test_ft_putstr test_ft_putstr.c)
add_executable(test_ft_putstr_fd test_ft_putstr_fd.c)
add_executable(test_ft_queue_del test_ft_queue_del.c)
add_executable(test_ft_queue_new test_ft_queue_new.c)
add_executable(test_ft_stack_del test_ft_stack_del.c)
add_executable(test_ft_stack_new test_ft_stack_new.c)
add_executable(test_ft_stack_pop test_ft_stack_pop.c)
add_executable(test_ft_stack_push test_ft_stack_push.c)
add_executable(test_ft_strcapitalize test_ft_strcapitalize.c)
add_executable(test_ft_strcat test_ft_strcat.c)
add_executable(test_ft_strchr test_ft_strchr.c)
add_executable(test_ft_strclr test_ft_strclr.c)
add_executable(test_ft_strcmp test_ft_strcmp.c)
add_executable(test_ft_strcpy test_ft_strcpy.c)
add_executable(test_ft_strdel test_ft_strdel.c)
add_executable(test_ft_strdup test_ft_strdup.c)
add_executable(test_ft_strequ test_ft_strequ.c)
add_executable(test_ft_strhash test_ft_strhash.c)
add_executable(test_ft_striter test_ft_striter.c)
add_executable(test_ft_striteri test_ft_striteri.c)
add_executable(test_ft_strjoin test_ft_strjoin.c)
add_executable(test_ft_strlcat test_ft_strlcat.c)
add_executable(test_ft_strlen test_ft_strlen.c)
add_executable(test_ft_strlowcase test_ft_strlowcase.c)
add_executable(test_ft_strmap test_ft_strmap.c)
add_executable(test_ft_strmapi test_ft_strmapi.c)
add_executable(test_ft_strncat test_ft_strncat.c)
add_executable(test_ft_strncmp test_ft_strncmp.c)
add_executable(test_ft_strncpy test_ft_strncpy.c)
add_executable(test_ft_strnequ test_ft_strnequ.c)
add_executable(test_ft_strnew test_ft_strnew.c)
add_executable(test_ft_strnstr test_ft_strnstr.c)
add_executable(test_ft_strrchr test_ft_strrchr.c)
add_executable(test_ft_strsplit test_ft_strsplit.c)
add_executable(test_ft_strstr test_ft_strstr.c)
add_executable(test_ft_strsub test_ft_strsub.c)
add_executable(test_ft_strtrim test_ft_strtrim.c)
add_executable(test_ft_tolower test_ft_tolower.c)
add_executable(test_ft_toupper test_ft_toupper.c)
add_executable(test_ft_strreverse test_ft_strreverse.c)
add_executable(test_ft_strsplit_any test_ft_strsplit_any.c)
add_executable(test_ft_strsplit_word test_ft_strsplit_word.c)

target_link_libraries(test_ft_strsplit_word ft)
target_link_libraries(test_ft_strreverse ft)
target_link_libraries(test_ft_strsplit_any ft)
target_link_libraries(test_ft_atoi ft)
target_link_libraries(test_ft_bzero ft)
target_link_libraries(test_ft_count_till ft)
target_link_libraries(test_ft_dequeue ft)
target_link_libraries(test_ft_enqueue ft)
target_link_libraries(test_ft_htdel ft)
target_link_libraries(test_ft_htget ft)
target_link_libraries(test_ft_htnew ft)
target_link_libraries(test_ft_htset ft)
target_link_libraries(test_ft_isalnum ft)
target_link_libraries(test_ft_isalpha ft)
target_link_libraries(test_ft_isascii ft)
target_link_libraries(test_ft_isdigit ft)
target_link_libraries(test_ft_isprint ft)
target_link_libraries(test_ft_iswhitespace ft)
target_link_libraries(test_ft_itoa ft)
target_link_libraries(test_ft_itoa_base ft)
target_link_libraries(test_ft_itoa_base_ext ft)
target_link_libraries(test_ft_lstadd ft)
target_link_libraries(test_ft_lstdel ft)
target_link_libraries(test_ft_lstdelone ft)
target_link_libraries(test_ft_lstfind ft)
target_link_libraries(test_ft_lstiter ft)
target_link_libraries(test_ft_lstmap ft)
target_link_libraries(test_ft_lstnew ft)
target_link_libraries(test_ft_lstreverse ft)
target_link_libraries(test_ft_memallo ft)
target_link_libraries(test_ft_memccpy ft)
target_link_libraries(test_ft_memchr ft)
target_link_libraries(test_ft_memcmp ft)
target_link_libraries(test_ft_memcpy ft)
target_link_libraries(test_ft_memdel ft)
target_link_libraries(test_ft_memmove ft)
target_link_libraries(test_ft_memset ft)
target_link_libraries(test_ft_power ft)
target_link_libraries(test_ft_print_bits_fd ft)
target_link_libraries(test_ft_putchar ft)
target_link_libraries(test_ft_putchar_fd ft)
target_link_libraries(test_ft_putendl ft)
target_link_libraries(test_ft_putendl_fd ft)
target_link_libraries(test_ft_putnbr ft)
target_link_libraries(test_ft_putnbr_fd ft)
target_link_libraries(test_ft_putstr ft)
target_link_libraries(test_ft_putstr_fd ft)
target_link_libraries(test_ft_queue_del ft)
target_link_libraries(test_ft_queue_new ft)
target_link_libraries(test_ft_stack_del ft)
target_link_libraries(test_ft_stack_new ft)
target_link_libraries(test_ft_stack_pop ft)
target_link_libraries(test_ft_stack_push ft)
target_link_libraries(test_ft_strcapitalize ft)
target_link_libraries(test_ft_strcat ft)
target_link_libraries(test_ft_strchr ft)
target_link_libraries(test_ft_strclr ft)
target_link_libraries(test_ft_strcmp ft)
target_link_libraries(test_ft_strcpy ft)
target_link_libraries(test_ft_strdel ft)
target_link_libraries(test_ft_strdup ft)
target_link_libraries(test_ft_strequ ft)
target_link_libraries(test_ft_strhash ft)
target_link_libraries(test_ft_striter ft)
target_link_libraries(test_ft_striteri ft)
target_link_libraries(test_ft_strjoin ft)
target_link_libraries(test_ft_strlcat ft)
target_link_libraries(test_ft_strlen ft)
target_link_libraries(test_ft_strlowcase ft)
target_link_libraries(test_ft_strmap ft)
target_link_libraries(test_ft_strmapi ft)
target_link_libraries(test_ft_strncat ft)
target_link_libraries(test_ft_strncmp ft)
target_link_libraries(test_ft_strncpy ft)
target_link_libraries(test_ft_strnequ ft)
target_link_libraries(test_ft_strnew ft)
target_link_libraries(test_ft_strnstr ft)
target_link_libraries(test_ft_strrchr ft)
target_link_libraries(test_ft_strsplit ft)
target_link_libraries(test_ft_strstr ft)
target_link_libraries(test_ft_strsub ft)
target_link_libraries(test_ft_strtrim ft)
target_link_libraries(test_ft_tolower ft)
target_link_libraries(test_ft_toupper ft)
